build: upgrade to spring boot 3.2.5 and enable kotlin