@@ -3,8 +3,12 @@ package kitchenpos.products.application;
 import kitchenpos.products.domain.Product;
 import kitchenpos.products.domain.ProductRepository;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 
 public class InMemoryProductRepository implements ProductRepository {
     private final Map<UUID, Product> products = new HashMap<>();
@@ -30,6 +34,6 @@ public class InMemoryProductRepository implements ProductRepository {
         return products.values()
             .stream()
             .filter(product -> ids.contains(product.getId()))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
